- [09 Jun 04] Moved "-no_quot" option from pa_o to camlp4, enabling to
  use it indepently fom pa_o.cmo.

- [17 Nov 04] Renamed "loc" into "_loc", introducing an incompatibility
  with existing code (3.08.x and before). Such code can generally run
  unmodified using the -loc option (camlp4 -loc "loc").

Camlp4 Version 3.08.2
------------------------
- [07 Oct 04] Changes in the interfaces plexer.mli and pcaml.mli:
   - plexer.mli: introduced a new lexer building function `make_lexer',
     similar to `gmake', but returning a triple of references in addition
     (holding respectively the character number of the beginning + of the
     current line, the current line number and the name of the file + being
     parsed).
   - pcaml.mli: a new value `position'. A global reference to a triple like
     the one mentioned above.
- [07 Sep 04] Camlp4 grammars `error recovery mode' now issues a warning
  when used (but this warning is disabled by default).

Camlp4 Version 3.08.[01]
------------------------
- [05 Jul 04] creation of the `unmaintained' directory:
  pa_format, pa_lefteval, pa_ocamllex, pa_olabl, pa_scheme and pa_sml
  go there, each in its own subdir. Currently, they compile fine.
- [05 Jul 04] pa_ifdef, subsumed by pa_macro since 3.07, prints a warning
  when loaded, encouraging use of pa_macro.
- [01 July 04] profiled versions of Camlp4 libs are *NOT* installed
  by default (not even built). To build and install them, uncomment
  the line PROFILING=prof in camlp4/config/Makefile.tpl, and then
  make opt.opt && make install
- [22-23 June 04] `make install' now installs also pa_[or].cmx, pa_[or]p.cmx,
  pa_[or]_fast.cmx, and odyl.cmx
- [12 may 04] Added to the camlp4 tools the -version option that prints
  the version number, in the same way as the other ocaml tools.
- [12 may 04] Locations are now handled as in OCaml. The main benefit
  is that line numbers are now correct in error messages. However, this