@@ -888,19 +888,14 @@ EXTEND
     [ [ "constraint"; t1 = ctyp; "="; t2 = ctyp -> (t1, t2) ] ]
   ;
   type_kind:
-    [ [ "private"; "{"; ldl = label_declarations; "}" ->
-          <:ctyp< private { $list:ldl$ } >>
-      | "private"; OPT "|"; 
-        cdl = LIST1 constructor_declaration SEP "|" -> <:ctyp< private [ $list:cdl$ ] >>
+    [ [ "private"; tk = type_kind -> <:ctyp< private $tk$ >>
       | test_constr_decl; OPT "|";
         cdl = LIST1 constructor_declaration SEP "|" -> <:ctyp< [ $list:cdl$ ] >>
       | t = ctyp -> <:ctyp< $t$ >>
-      | t = ctyp; "="; "private"; "{"; ldl = label_declarations; "}" ->
-          <:ctyp< $t$ == private { $list:ldl$ } >>
+      | t = ctyp; "="; "private"; tk = type_kind ->
+          <:ctyp< $t$ == private $tk$ >>
       | t = ctyp; "="; "{"; ldl = label_declarations; "}" ->
           <:ctyp< $t$ == { $list:ldl$ } >>
-      | t = ctyp; "="; "private"; OPT "|"; cdl = LIST1 constructor_declaration SEP "|" ->
-          <:ctyp< $t$ == private [ $list:cdl$ ] >>
       | t = ctyp; "="; OPT "|"; cdl = LIST1 constructor_declaration SEP "|" ->
           <:ctyp< $t$ == [ $list:cdl$ ] >>
       | "{"; ldl = label_declarations; "}" ->
