@@ -1,3 +1,6 @@
+- [29 Jun 05] Add private row types. Make "private" a type constructor
+  "TyPrv" rather than a flag. (Jacques)
+
 - [09 Jun 04] Moved "-no_quot" option from pa_o to camlp4, enabling to
   use it indepently fom pa_o.cmo.
 
